uploading main branch files

--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.14",
-    "@angular/cli": "^18.2.14",
+    "@angular/build": "^18.2.14",
+    "@angular/cli": "^18.2.19",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
+    "baseline-browser-mapping": "^2.8.30",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
